--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "tape": "~2.5.0",
     "node-sass": "~0.8.1"
+  },
+  "engines": {
+    "node": "0.11.x",
+    "npm": "1.2.x"
   }
 }
